--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -6,9 +6,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
 :root {
-    --fonte1:Verdana, Geneva, Tahoma, sans-serif;
-    --fonte2:'Passion One', cursive;
-    --fonte3:'Sriracha', cursive;
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
 }
 
 * {
@@ -17,7 +17,8 @@
     font-size: 1em;
 }
 
-html, body {
+html,
+body {
     min-height: 100vh;
     background-color: darkgray;
     font-family: var(--fonte1);
@@ -29,24 +30,26 @@ header {
     text-align: center;
 }
 
-header > h1{
+header>h1 {
     padding-top: 50px;
     font-variant: small-caps;
     font-family: var(--fonte2);
     font-size: 10vw;
 }
 
-header > p {
+header>p {
     padding-bottom: 50px;
 }
 
-headera, footer a {
+headera,
+footer a {
     color: white;
     text-decoration: none;
     font-weight: bolder;
 }
 
-header a:hover, footer a:hover {
+header a:hover,
+footer a:hover {
     text-decoration: underline;
 }
 
@@ -59,20 +62,39 @@ section {
     font-size: 3.5vw;
 }
 
+section>p {
+    padding-bottom: 1em;
+}
+
 section.normal {
     background-color: white;
     color: black;
 }
 
-section.image {
+section.imagem {
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
-section.image > p {
-   display: inline-block;
-   padding: 5px;
-    background-color: rgba(0, 0, 0, 0.253);
+section.imagem>p {
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    
 }
 
 footer {
